# MTC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: mem_array.h  mutex.h  setup.h  webserver.h
src/: main.c  mem_array.c  mutex.c  webserver.c
